Bug 206092 New window from Composer/MailNews only opens blank page p=ian@arlen.demon.co.uk r=me sr=jag