xpfe/components/history/src/nsGlobalHistory.cpp
@@ -106,6 +106,8 @@ nsIPrefBranch* nsGlobalHistory::gPrefBranch = nsnull;
 #define PREF_BRANCH_BASE                        "browser."
 #define PREF_BROWSER_HISTORY_EXPIRE_DAYS        "history_expire_days"
 #define PREF_BROWSER_STARTUP_PAGE               "startup.page"
+#define PREF_BROWSER_TABS_LOADONNEWTAB          "tabs.loadOnNewTab"
+#define PREF_BROWSER_WINDOWS_LOADONNEWWINDOW    "windows.loadOnNewWindow"
 #define PREF_AUTOCOMPLETE_ONLY_TYPED            "urlbar.matchOnlyTyped"
 #define PREF_AUTOCOMPLETE_ENABLED               "urlbar.autocomplete.enabled"
 
@@ -613,6 +615,11 @@ nsGlobalHistory::AddPage(const char *aURL)
   if (gPrefBranch) {
     PRInt32 choice = 0;
     gPrefBranch->GetIntPref(PREF_BROWSER_STARTUP_PAGE, &choice);
+    if (choice != 2) {
+      gPrefBranch->GetIntPref(PREF_BROWSER_WINDOWS_LOADONNEWWINDOW, &choice);
+      if (choice != 2)
+        gPrefBranch->GetIntPref(PREF_BROWSER_TABS_LOADONNEWTAB, &choice);
+    }
     if (choice == 2) {
       rv = SaveLastPageVisited(aURL);
       NS_ENSURE_SUCCESS(rv, rv);
